Fix registration form cut off and mobile view

--- a/src/main/static/stylesheets/register.scss
+++ b/src/main/static/stylesheets/register.scss
@@ -1,7 +1,8 @@
 .register {
   min-height: 100vh;
-  position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 
   &__copy-container {
     align-items: center;
@@ -11,9 +12,7 @@
     display: flex;
     justify-content: center;
     left: 0;
-    position: absolute;
-    top: 0;
-    width: 50%;
+    flex: 1;
   }
 
   &__copy {
@@ -69,17 +68,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 50%;
+    flex: 1;
+    overflow-y: auto;
+    padding: 40px 0;
   }
 
   &__form {
     background: var(--background-light-2);
     color: var(--color-text-light-1);
     margin-right: auto;
-    max-width: 550px;
+    max-width: 750px;
     padding-left: 90px;
     width: 100%;
 
@@ -196,6 +194,10 @@
     &__form {
       padding-left: 30px;
     }
+  }
+
+  @media screen and (max-width: $width-tablet) {
+    flex-direction: column;
   }
 
   &--mobile {
